# KZOCR

./: .coverage  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CODEBUDDY.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  kzocr.db  pyproject.toml  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
docs/: TEST_REPORT.md  db-interface.md  deploy-v07.md  e2e-expand-divergence.md
engine_configs/: kimi.json  mineru.json  mock.json  ms-autoglm-phone-9b.json  ms-deepseek-vl2.json  ms-intern-s1-pro.json  ms-intern-s2-preview.json  ms-kimi-k2-5-dashscope.json  ms-kimi-k2-6-dashscope.json  ms-kimi-k2-7-code-moonshot.json  ms-minimax-m3.json  ms-qwen3-5-122b-a10b.json  ms-qwen3-5-27b.json  ms-qwen3-5-35b-a3b.json  ms-qwen3-5-397b-a17b.json  ms-qwen3-vl-235b-a22b-instruct.json  ms-qwen3-vl-235b-a22b-thinking.json  ms-qwen3-vl-30b-a3b-instruct.json  ms-qwen3-vl-30b-a3b-thinking.json  ms-qwen3-vl-8b-instruct.json  ms-qwen3-vl-8b-thinking.json  ms-step-3-7-flash.json  paddleocr.json  paddleocr_vl16.json  rapidocr.json  sensenova.json  siliconflow-deepseek-ocr.json  siliconflow-paddleocr.json  siliconflow-qwen-vl.json  tesseract.json
kzocr/: ARCHITECTURE.md  __init__.py  cli.py  cli_benchmark.py  cli_review.py  config.py  export_zai.py  modelscope_pool.py
prompts/: check_prompt.json  correct_prompt.json
registrations/: 1111.json  111111.json
scripts/: README.md  bench_char_boxes.py  bench_engine_compare.py  bench_ovisocr2.py  bench_paddle_perf.py  bench_page_concurrency.py  build_confusion_resources.py  build_proofread_app.sh  build_tailwind.sh  check_char_bbox.py  check_render_health.py  e2e_cross_engine_realbook.py  e2e_expand_books.py  e2e_orchestrator.py  feedback_canonical_errors.py  learn_confusion_from_divergences.py  proofread_entry.py  run_e2e_nightly.py  setup_submodules.sh  smoke_adapters.py  validate_vl_glm.py
tests/: test_adapters.py  test_archive_line_results_off.py  test_atomic.py  test_batch.py  test_benchmark_cli.py  test_book_result_convert.py  test_bookdb_canonical.py  test_bookdb_content.py  test_bookdb_crop_image.py  test_bookdb_proofread.py  test_bookpipeline_adapter.py  test_canonical.py  test_canonical_feedback.py  test_celery_config.py  test_celery_persist_wiring.py  test_celery_task_summary.py  test_celery_tasks_import.py  test_chaos.py  test_cli.py  test_cli_review.py  test_cli_review_cmd.py  test_cloudllm_env.py  test_common.py  test_concurrency.py  test_config.py  test_cross_align.py  test_cross_align_logic.py  test_cross_divergence.py  test_db.py  test_doc_import.py  test_doc_import_safe.py  test_doc_pg_mock.py  test_doc_push_loop.py  (+76 more)
(+403 files in other folders)
