[project]
name = "kzocr"
version = "0.2.0"
description = "KZOCR — 整合 kimi OCR 引擎 + zai 校对台，并将最终文档送入 kHUB"
requires-python = ">=3.10"
dependencies = [
    # 编排层运行依赖（mock 链路也需这两项）：
    "PyMuPDF>=1.23",          # fitz：PDF 渲染（_pdf_page_to_numpy）
    "numpy>=1.24",             # 版心裁剪/数组处理
    # 真实引擎依赖（MinerU/PaddleOCR/torch/LLM）在运行环境另行安装。
]

[project.optional-dependencies]
llm = ["openai>=1.0"]   # 仅 modelscope_pool 云端 LLM 大池需要（当前未接入管线，可选）

[project.scripts]
kzocr = "kzocr.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kzocr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
