[project]
name = "kzocr"
version = "0.22.0"
description = "KZOCR — 中医古籍 OCR 编排系统"
requires-python = ">=3.10"
dependencies = [
    # 编排层运行依赖（mock 链路也需这两项）：
    "PyMuPDF>=1.23",          # fitz：PDF 渲染（_pdf_page_to_numpy）
    "numpy>=1.24",             # 版心裁剪/数组处理
    # 后台任务队列（Celery worker，见 docker-compose worker 服务）：
    "celery>=5.3,<6",          # 任务队列；dev/prod 锁定主版本，避免 MaxRetriesError 类漂移
    "redis>=5.0",              # Celery broker/result backend 客户端（redis://）
    # 真实引擎依赖（MinerU/PaddleOCR/torch/LLM）在运行环境另行安装。
]

[project.optional-dependencies]
llm = ["openai>=1.0"]   # 仅 modelscope_pool 云端 LLM 大池需要（当前未接入管线，可选）
web = ["fastapi>=0.110", "uvicorn>=0.29", "jinja2>=3.1"]  # Web 管理面板

[project.scripts]
kzocr = "kzocr.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kzocr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 性能基准测试（墙钟断言，机器负载下偶发失败）默认不跑；
# 显式运行：pytest -m benchmark
addopts = ["-m", "not benchmark"]
markers = [
    "benchmark: 性能基准测试，依赖机器速度，CI 默认跳过，需显式 -m benchmark 运行",
]

# 覆盖率门禁（W8）：仅统计主线核心模块，排除冻结的 tcm_ocr 平行栈与测试代码，
# 避免其缺失的 ANN/低覆盖拉低整体；fail_under=80 作为防回归下限（当前核心 ~89%）。
[tool.coverage.run]
omit = ["kzocr/tcm_ocr/*", "tests/*"]

[tool.coverage.report]
fail_under = 80
